<?xml version="1.0"?>
<package format="2">
  <name>par_msgs</name>
  <version>0.0.0</version>
  <description>The Pixel Art Robot - Messages Package</description>

  <maintainer email="jbp2157@columbia.edu">Joaquin Palacios</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <url type="website">https://github.com/jpalacios2001col/pixel_art_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- <export>
  </export> -->
</package>
